# adventofcode

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
2020/: README.md
2020/1/: README.md  part_one.py  part_two.py
2020/2/: part_one.py  part_two.py
2020/3/: part_one.py  part_two.py
2020/4/: part_one.py  part_two.py
2020/5/: part_one.py  part_two.py  utils.py
2020/6/: part_one.py  part_two.py
2020/7/: part_one.py  part_two.py
2020/8/: part_one.py  part_two.py
2020/9/: part_one.py  part_two.py
2022/day_1/: solution.py
2022/day_2/: part_1.py  part_2.py
2022/day_3/: part_1.py  part_2.py
2022/day_4/: part_1.py  part_2.py
2022/day_5/: part_1.py  part_2.py
2022/day_6/: part_1.py  part_2.py
2022/day_7/: part_1.py  part_2.py
2022/day_8/: part_1.py  part_2.py
2022/day_9/: part_1.py  part_2.py
