[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["Roman Frolov <roman@frolov.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
flake8 = "<6.0.0"
flake8-bugbear = "^22.10.27"
flake8-builtins = "^2.0.1"
flake8-commas = "^2.1.0"
flake8-comprehensions = "^3.10.1"
flake8-isort = "^5.0.3"
flake8-literal = "^1.3.0"
flake8-multiline-containers = "^0.0.19"
flake8-mutable = "^1.2.0"
flake8-no-implicit-concat = "^0.3.4"
flake8-print = "^5.0.0"
flake8-pyproject = "^1.2.2"
flake8-quotes = "^3.3.1"
flake8-simplify = "^0.19.3"
flake8-string-format = "^0.3.0"
isort = "^5.10.1"
pep8-naming = "^0.13.2"
pre-commit = "^2.20.0"
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
exclude = ['venv']

statistics = true
max-line-length = 120

inline-quotes = 'single'
multiline-quotes = 'single'
docstring-quotes = 'double'

[tool.isort]
skip = 'venv'
indent = 4
line_length = 80
multi_line_output = 5
combine_as_imports = true
include_trailing_comma = true
